*jekyll-sass-converter-1.2.0 (11 Aug 2014)

  11 Aug 2014; Manuel Rüger <mrueg@gentoo.org>
  +jekyll-sass-converter-1.2.0.ebuild, +metadata.xml:
  [www-apps/jekyll-sass-converter] Initial ebuild. WIP.